compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__blocks__block_with_parenthesised_expression_returning_from_function.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
assertion_line: 208
expression: "\nfn b() {\n  {\n    1 + 2\n  }\n}\n"
---
----- SOURCE CODE

fn b() {
  {
    1 + 2
  }
}


----- COMPILED JAVASCRIPT
function b() {
  return 1 + 2;
}
