compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__blocks__nested_multiexpr_blocks_with_pipe.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
assertion_line: 54
expression: "\nfn add1(a) {\n  a + 1\n}\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3 |> add1\n    } |> add1\n  }\n  x\n}\n"
---
----- SOURCE CODE

fn add1(a) {
  a + 1
}
fn go() {
  let x = {
    1
    {
      2
      3 |> add1
    } |> add1
  }
  x
}


----- COMPILED JAVASCRIPT
function add1(a) {
  return a + 1;
}

function go() {
  let x = (() => {
    1;
    let _pipe = (() => {
      2;
      let _pipe = 3;
      return add1(_pipe);
    })();
    return add1(_pipe);
  })();
  return x;
}
