compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__blocks__nested_multiexpr_non_ending_blocks.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
assertion_line: 75
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n    4\n  }\n  x\n}\n"
---
----- SOURCE CODE

fn go() {
  let x = {
    1
    {
      2
      3
    }
    4
  }
  x
}


----- COMPILED JAVASCRIPT
function go() {
  let x = (() => {
    1;
    (() => {
      2;
      return 3;
    })();
    return 4;
  })();
  return x;
}
