compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__blocks__nested_simple_blocks.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
assertion_line: 20
expression: "\nfn go() {\n  let x = {\n    {\n      3\n    }\n  }\n  x\n}\n"
---
----- SOURCE CODE

fn go() {
  let x = {
    {
      3
    }
  }
  x
}


----- COMPILED JAVASCRIPT
function go() {
  let x = 3;
  return x;
}
