compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__blocks__right_operator_sequence.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
assertion_line: 141
expression: "\nfn go() {\n  {\n    1\n    2\n  } == 1\n}\n"
---
----- SOURCE CODE

fn go() {
  {
    1
    2
  } == 1
}


----- COMPILED JAVASCRIPT
function go() {
  return (() => {
    1;
    return 2;
  })() === 1;
}
