compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__blocks__sequences.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
assertion_line: 114
expression: "\nfn go() {\n  \"one\"\n  \"two\"\n  \"three\"\n}\n"
---
----- SOURCE CODE

fn go() {
  "one"
  "two"
  "three"
}


----- COMPILED JAVASCRIPT
function go() {
  "one";
  "two";
  return "three";
}
